# cloudlab

./: .cloudlab.duckdb.tmp  .gitignore  Cargo.toml  README.md  WIKI.md  scratch_pool.rs  scratch_pool2.rs  test_routes.rs
.cargo/: config.toml
scratch/: debug_linstor.rs
src/: ai_proxy.rs  api_keys.rs  app.rs  auth.rs  backups.rs  containers.rs  databases.rs  hosts.rs  jobs.rs  lib.rs  llms.rs  main.rs  proxy.rs  settings.rs  ssh.rs  storage.rs  storage_ssr.rs  vms.rs
src/components/: backups.rs  chat.rs  containers.rs  dashboard.rs  databases.rs  hosts.rs  icons.rs  job_panel.rs  jobs.rs  layout.rs  llms.rs  mod.rs  profile.rs  proxy.rs  settings.rs  vms.rs
src/components/settings/: api_keys.rs
src/components/storage/: file_browser.rs  mod.rs  storage_list.rs
style/: tailwind.css
target-check/: .rustc_info.json
