[package]
name = "cloudlab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
duckdb = { version = "1.10501.0", features = ["bundled", "r2d2"], optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"], optional = true }
bcrypt = { version = "0.15", optional = true }
axum-extra = { version = "0.10.0", features = ["cookie"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
ssh2 = { version = "0.9", optional = true }
dashmap = { version = "6.1", optional = true }
once_cell = { version = "1.19", optional = true }
gloo-timers = { version = "0.4.0", features = ["futures"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
futures = "0.3"
lepticons = "0.8"
sync_wrapper = "1.0"
web-sys = { version = "0.3.77", features = ["Window", "Navigator", "Clipboard", "FileList", "File", "HtmlInputElement", "FormData", "Blob", "DragEvent", "DataTransfer", "DataTransferItemList", "DataTransferItem"] }
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2.1.3"

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:duckdb",
    "dep:uuid",
    "dep:bcrypt",
    "dep:axum-extra",
    "dep:r2d2",
    "dep:ssh2",
    "dep:dashmap",
    "dep:once_cell",
]
gloo-timers = []

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "cloudlab"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/cloudlab.css
tailwind-input-file = "style/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

# Explicitly specify the bin target for cargo-leptos
bin-target = "cloudlab"
